--- a/foodie-api/pom.xml
+++ b/foodie-api/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>foodie-api</artifactId>
+    <packaging>war</packaging>
 
     <dependencies>
         <!--
@@ -21,6 +22,13 @@
             <artifactId>foodie-service</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 
