--- a/foodie-pojo/pom.xml
+++ b/foodie-pojo/pom.xml
@@ -17,6 +17,18 @@
             <artifactId>foodie-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+<!--        <dependency>-->
+<!--            <groupId>org.hibernate.validator</groupId>-->
+<!--            <artifactId>hibernate-validator</artifactId>-->
+<!--        </dependency>-->
+
+
+        <!--        <dependency>-->
+<!--            <groupId>javax.validation</groupId>-->
+<!--            <artifactId>validation-api</artifactId>-->
+<!--        </dependency>-->
+
     </dependencies>
 
 </project>
